# django_model_builder

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
src/django_model_builder/: manage.py  pyproject.toml  schema.yml
src/django_model_builder/api/: models.py  serializers.py  tests.py  urls.py  views.py
src/django_model_builder/api/migrations/: 0001_initial.py
src/django_model_builder/django_model_builder/: asgi.py  settings.py  urls.py  wsgi.py
src/django_model_builder/requirements/: requirements.txt
